--- a/poetry-multilang-site/main/templates/main/index.html
+++ b/poetry-multilang-site/main/templates/main/index.html
@@ -2,10 +2,11 @@
 {% load i18n %}
 <link rel="stylesheet" href="{% static 'index.css' %}">
 <body>
+    {% include "./header.html" %}
     <div id="articles">
         {% if articles %}
             {% for article in articles %}
-                <a href="{% url 'detail' article.id %}">
+                <a href="{% url 'main:detail' article.id %}">
                     <fieldset>
                         <legend>{{ article.title }}</legend>
                         <img src="{{ article.image.url }}" alt="connect" style="max-height:300px">
@@ -17,20 +18,4 @@
             <p>{% translate "No articles are available" %}</p>
         {% endif %}
     </div>
-
-
-    <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
-        <input name="next" type="hidden" value="{{ redirect_to }}">
-        <select name="language">
-            {% get_current_language as LANGUAGE_CODE %}
-            {% get_available_languages as LANGUAGES %}
-            {% get_language_info_list for LANGUAGES as languages %}
-            {% for language in languages %}
-                <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                    {{ language.name_local }} ({{ language.code }})
-                </option>
-            {% endfor %}
-        </select>
-        <input type="submit" value="Go">
-    </form>
 </body>
