--- a/poetry-multilang-site/main/templates/main/detail2.html
+++ b/poetry-multilang-site/main/templates/main/detail2.html
@@ -4,5 +4,6 @@
         <h1>{{ article.title }}</h1>
         <p>{{ article.content }}</p>
         <img src="{{ article.image.url }}" alt="connect" style="max-height:300px">
+        {% include "./llm.html" %}
     </main>
 </body>
