--- a/poetry-multilang-site/main/templates/main/index.html
+++ b/poetry-multilang-site/main/templates/main/index.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load i18n %}
-<link rel="stylesheet" href="{% static 'index.css' %}">
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
 <body>
     {% include "./header.html" %}
     <div id="articles">
@@ -18,4 +18,5 @@
             <p>{% translate "No articles are available" %}</p>
         {% endif %}
     </div>
+    {% include "./llm.html" %}
 </body>
