--- a/poetry-multilang-site/main/templates/main/detail2.html
+++ b/poetry-multilang-site/main/templates/main/detail2.html
@@ -1,9 +1,14 @@
+{% load static %}
 <body>
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <link rel="stylesheet" href="{% static 'css/detail.css' %}">
     {% include "./header.html" %}
     <main>
-        <h1>{{ article.title }}</h1>
-        <p>{{ article.content }}</p>
-        <img src="{{ article.image.url }}" alt="connect" style="max-height:300px">
-        {% include "./llm.html" %}
+        <div id="article">
+            <h1>{{ article.title }}</h1>
+            <p>{{ article.content }}</p>
+            <img class="contain" src="{{ article.image.url }}" alt="connect" style="max-height:300px">
+        </div>
     </main>
+    {% include "./llm.html" %}
 </body>
