--- a/poetry-multilang-site/main/templates/main/header.html
+++ b/poetry-multilang-site/main/templates/main/header.html
@@ -1,9 +1,10 @@
 {% load static %}
 {% load i18n %}
 <header>
-    <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+    <a href="{% url 'main:index' %}">Multilang-Site</a>
+    <form id="select-language" action="{% url 'set_language' %}" method="post">{% csrf_token %}
         <input name="next" type="hidden" value="{{ redirect_to }}">
-        <select name="language">
+        <select name="language" onchange="autoSubmitForm()">
             {% get_current_language as LANGUAGE_CODE %}
             {% get_available_languages as LANGUAGES %}
             {% get_language_info_list for LANGUAGES as languages %}
@@ -13,6 +14,6 @@
                 </option>
             {% endfor %}
         </select>
-        <input type="submit" value="Go">
     </form>
+    <script src="{% static 'js/select-language.js' %}"></script>
 </header>
