--- a/poetry-multilang-site/main/static/css/chatbot.css
+++ b/poetry-multilang-site/main/static/css/chatbot.css
@@ -104,13 +104,13 @@ h2{
 	text-align:left;
 	border-radius:5px;
 }
-#chat .me{
+#chat .user{
 	text-align:right;
 }
 #chat .llama3 .message{
 	background-color:#58b666;
 }
-#chat .me .message{
+#chat .user .message{
 	background-color:#6fbced;
 }
 #chat .triangle{
@@ -123,7 +123,7 @@ h2{
 		border-color: transparent transparent #58b666 transparent;
 		margin-left:15px;
 }
-#chat .me .triangle{
+#chat .user .triangle{
 		border-color: transparent transparent #6fbced transparent;
 		margin-left:375px;
 }
