--- a/poetry-multilang-site/main/templates/main/detail1.html
+++ b/poetry-multilang-site/main/templates/main/detail1.html
@@ -1,7 +1,7 @@
 {% load static %}
 <body>
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
-     <link rel="stylesheet" href="{% static 'css/detail.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/index.css' %}">
+     <link rel="stylesheet" href="{% static 'main/css/detail.css' %}">
     {% include "./header.html" %}
     <main>
         <div id="article">
