--- a/poetry-multilang-site/main/templates/main/header.html
+++ b/poetry-multilang-site/main/templates/main/header.html
@@ -15,5 +15,5 @@
             {% endfor %}
         </select>
     </form>
-    <script src="{% static 'js/select-language.js' %}"></script>
+    <script src="{% static 'main/js/select-language.js' %}"></script>
 </header>
