--- a/poetry-multilang-site/main/templates/main/index.html
+++ b/poetry-multilang-site/main/templates/main/index.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load i18n %}
-<link rel="stylesheet" href="{% static 'css/index.css' %}">
+<link rel="stylesheet" href="{% static 'main/css/index.css' %}">
 <body>
     {% include "./header.html" %}
     <main>
